# streamdock

./: .gitignore  .vm-uitest.conf  LICENSE  README.md  pyproject.toml  streamdock.toml  streamdock.yaml
.github/workflows/: ci.yml
examples/: rainbow.py
macos/: Package.resolved  Package.swift  README.md
macos/Resources/: Info.plist  StreamDock.icns
macos/Scripts/: GenerateAppIcon.swift
macos/Sources/StreamDockApp/: AppModel.swift  ContentView.swift  KeyInspectorView.swift  SecretsView.swift  SourceEditorView.swift  StreamDockApp.swift
macos/Sources/StreamDockCore/: ActionExecutor.swift  ColorHex.swift  ConfigurationStore.swift  ControlProtocol.swift  ControlServer.swift  DeckPage+Reorder.swift  DeckRuntimeController.swift  DeviceProtocol.swift  HIDDevice.swift  KeyFaceRenderer.swift  LanguageDetector.swift  Models.swift  PythonBridge.swift  SecretsStore.swift  SyntaxHighlighter.swift  WebControlServer.swift
macos/Sources/StreamDockCoreChecks/: main.swift
macos/Sources/streamdock/: main.swift
macos/StreamDock.xcodeproj/: project.pbxproj
macos/Tests/StreamDockCoreTests/: ActionExecutorTests.swift  ColorHexTests.swift  ControlServerTests.swift  (+8 more)
macos/UITests/: DeckSettingsUITests.swift  DragAndDropUITests.swift  KeyDeletionUITests.swift  StreamDockUITestCase.swift
src/streamdock/: __init__.py  _color.py  _hidapi_path.py  cli.py  control.py  device.py  layout.py  menubar.py  profile.py  render.py  webui.py
tests/: test_config_io.py  test_control.py  test_device_geometry.py  test_layout.py  test_menubar.py  test_paging.py  test_render.py  test_webui.py
(+3 files in other folders)
